hls/lab4/prj/fir/fir/logs/hls_run_csim_21620.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/fir 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
WARNING: [HLS 200-1921] Skipping unknown ini [hls] entry 'csim.flags=-I"E:/xilinx/Vitis/2024.2/include/legacy"' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'syn.file=E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=E:/robot/project/xilinx_fpga_class/hls/lab4/fir_coef.dat' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'E:/robot/project/xilinx_fpga_class/hls/lab4/fir_coef.dat' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=E:/robot/project/xilinx_fpga_class/hls/lab4/fir_test.c' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'E:/robot/project/xilinx_fpga_class/hls/lab4/fir_test.c' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=fir' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu5eg-sfvc784-1-e' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu5eg-sfvc784-1-e'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(9)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from E:/robot/project/xilinx_fpga_class/hls/lab4/prj/fir/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [HLS 211-200] Compiling source code E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code E:/robot/project/xilinx_fpga_class/hls/lab4/fir_test.c as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c as test bench code with instrumentation
In file included from E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c:29:
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:49:9: error: unknown type name 'ap_int'
typedef ap_int<6> dinA_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:49:15: error: expected identifier or '('
typedef ap_int<6> dinA_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:50:9: error: unknown type name 'ap_int'
typedef ap_int<12> dinB_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:50:15: error: expected identifier or '('
typedef ap_int<12> dinB_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:51:9: error: unknown type name 'ap_int'
typedef ap_int<22> dinC_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:51:15: error: expected identifier or '('
typedef ap_int<22> dinC_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:52:9: error: unknown type name 'ap_int'
typedef ap_int<33> dinD_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:52:15: error: expected identifier or '('
typedef ap_int<33> dinD_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:54:9: error: unknown type name 'ap_int'
typedef ap_int<18> dout1_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:54:15: error: expected identifier or '('
typedef ap_int<18> dout1_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:55:9: error: unknown type name 'ap_uint'
typedef ap_uint<13> dout2_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:55:16: error: expected identifier or '('
typedef ap_uint<13> dout2_t;
               ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:56:9: error: unknown type name 'ap_int'
typedef ap_int<22> dout3_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:56:15: error: expected identifier or '('
typedef ap_int<22> dout3_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:57:9: error: unknown type name 'ap_int'
typedef ap_int<6> dout4_t;
        ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:57:15: error: expected identifier or '('
typedef ap_int<6> dout4_t;
              ^
E:/robot/project/xilinx_fpga_class/hls/lab4/fir.h:64:9: error: unknown type name 'int38'
typedef int38   acc_t;
        ^
17 errors generated.
slxcmd:0:0: warning: Non-zero exit code: 1 returned by 'INFO: [HLS 211-200] Compiling source code E:/robot/project/xilinx_fpga_class/hls/lab4/fir.c as hardware code with instrumentation'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 4 seconds. Total CPU system time: 2 seconds. Total elapsed time: 11.661 seconds; peak allocated memory: 618.895 MB.
